<resources>
    <string name="app_name">Number Guessing Game</string>
    <string name="game_description">
        Welcome to the Number Guessing Game. A random number in the range 0 to 9 will be chosen and
        you will have 6 guesses to get it. Each time you guess the correct number, the level will
        increase by 10 and you will get some more guesses. If you run out of guesses, you lose.
        Complete as many levels as you can. Good luck!
    </string>
    <string name="play">Play</string>
    <string name="level">LEVEL 1</string>
    <string name="guesses_left">Guesses left: 20</string>
    <string name="guess">Guess</string>
    <string name="hint">hint</string>
    <string name="enter_number">enter number</string>
</resources>