<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@color/dark_primary_color2"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guesses_left"
        android:textColor="@color/dark_primary_color2"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLevel" />

    <Button
        android:id="@+id/btnGuess"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/guess"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuesses"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/dark_primary_color2"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/enter_number"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGuess"
        app:layout_constraintEnd_toStartOf="@+id/btnHint"
        app:layout_constraintStart_toEndOf="@+id/btnGuess"
        app:layout_constraintTop_toBottomOf="@+id/tvGuesses"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnHint"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:text="@string/hint"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuesses"
        tools:ignore="TextContrastCheck" />

    <GridView
        android:id="@+id/simpleGridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/dark_primary_color"
        android:horizontalSpacing="2dp"
        android:numColumns="10"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>